examples/test/testpolicy14413.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14413
  namespace: namespace137
spec:
  podSelector:
    matchLabels:
      key33: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value4
          key36: value23
      podSelector:
        matchLabels:
          key8: value15
          key46: value12
